# grove

./: .gitignore  .ubsignore  AGENTS.md  Cargo.toml  PLAN.md  README.md  grove.toml  install.sh
.beads/: issues.jsonl
.beads/.br_history/: issues.20260328_101951.jsonl
.github/workflows/: release.yml
.grove/: grove.db  grove.db-shm
.grove/logs/: runtime.jsonl
.grove/transcripts/grove-39d/: ses-run-grove-39d-20260328T100941844.jsonl
crates/grove-br/: Cargo.toml
crates/grove-br/src/: client.rs  lib.rs  schema.rs  tests.rs
crates/grove-bv/: Cargo.toml
crates/grove-bv/src/: lib.rs
crates/grove-cli/: Cargo.toml
crates/grove-cli/src/: clean.rs  main.rs  tests.rs
crates/grove-cli/tests/: phase1_acceptance.rs  phase3_acceptance.rs  phase4_acceptance.rs  phase5_acceptance.rs  phase6_acceptance.rs
crates/grove-config/: Cargo.toml
crates/grove-config/src/: defaults.rs  init_template.rs  lib.rs  loader.rs  model.rs  paths.rs  validate.rs
crates/grove-db/: Cargo.toml
crates/grove-db/migrations/: 0001_init.sql  0002_prompt_manifest_columns.sql  0003_leader_lease.sql  0006_observability.sql  0007_archive_fts.sql  0011_circuit_breaker_state.sql  0012_session_provider.sql  0013_multi_phase_handoffs.sql
crates/grove-db/src/: archive.rs  lib.rs  ops.rs  playbook.rs  tests.rs
crates/grove-kernel/: Cargo.toml
crates/grove-kernel/src/: archive.rs  diary.rs  dispatch.rs  inspect_view.rs  lib.rs  operator_docs.rs  policy.rs  reactions.rs  scoring.rs  status_view.rs  tests.rs
crates/grove-session/src/: analysis.rs  analyzer.rs  backend.rs  lib.rs  materializer.rs  parser.rs  protocol.rs  retry.rs  runner.rs  transcript.rs  verify.rs
crates/grove-types/: Cargo.toml
crates/grove-types/src/: archive.rs  checkpoint.rs  errors.rs  event.rs  handoff.rs  ids.rs  lib.rs  ops.rs  playbook.rs  priority.rs  prompt.rs  reaction.rs  reservation.rs  run.rs  session.rs  task.rs  tests.rs  workflow.rs
crates/grove-types/src/prompt/: tests.rs
crates/grove-types/src/reaction/: tests.rs
result-built-with-grove/: README.md
(+17 files in other folders)
