[package]
name = "grove-bv"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
camino.workspace = true
chrono = { version = "0.4", features = ["serde"] }
grove-types = { path = "../grove-types" }
serde.workspace = true
serde_json = "1"
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
