[package]
name = "grove-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
camino.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
