[package]
name = "grove-db"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
grove-types = { path = "../grove-types" }
rusqlite.workspace = true

[dev-dependencies]
tempfile = "3"
