[package]
name = "grove-types"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
camino.workspace = true
chrono = { version = "0.4", features = ["serde"] }
serde.workspace = true
serde_json = "1"
thiserror.workspace = true

[lints]
workspace = true
